# aoc-2023

./: .gitignore  CMakeLists.txt  LICENSE.md  Makefile  README.md  main.cpp  vcpkg.json
.github/workflows/: ci.yml
include/puzzle/: day01_puzzle.hpp  day02_puzzle.hpp  day03_puzzle.hpp  day04_puzzle.hpp  day07_puzzle.hpp  day_puzzle.hpp  puzzle_registrar.hpp  puzzle_registry.hpp
include/service/: puzzle_service.hpp
include/session/: session.hpp
include/util/: string_utils.hpp  time_utils.hpp  utils.hpp
src/puzzle/: day01_puzzle.cpp  day02_puzzle.cpp  day03_puzzle.cpp  day04_puzzle.cpp  day05_puzzle.cpp  day06_puzzle.cpp  day07_puzzle.cpp  day08_puzzle.cpp  day09_puzzle.cpp  day10_puzzle.cpp  puzzle_registry.cpp
src/service/: puzzle_service.cpp
src/session/: session.cpp
src/util/: string_utils.cpp
templates/: PuzzleConfig.h.in
tests/data/: sample_puzzle_data.json
tests/puzzle/: test_day01_puzzle.cpp  test_day02_puzzle.cpp  test_day03_puzzle.cpp  test_day04_puzzle.cpp  test_day07_puzzle.cpp  test_day_puzzle.cpp
tests/service/: puzzle_service_mock.hpp
